--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,35 @@
-/* .attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); } */
-/* @import url("https://fonts.google.com/specimen/Hanken+Grotesk"); */
-
 *{
     margin: 0;
     padding: 0;
     font-family: 'Hanken Grotesh', sans-serif;
     /* background-color: hsl(0, 0%, 100%); */
 }
-
 body{
     /* background-color: hsl(241, 100%, 89%); */
     background-color: hsl(221, 100%, 96%);
 }
-
 .main-section{
     display: flex;
     border: 1px;
     border-radius: 20%;
 }
-
 .result-main{
     /* background-color: hsl(241, 81%, 54%); */
     background-color: hsl(252, 100%, 67%);
     font-weight: 500;
 }
-
 .result{
     font-family: 'Hanken Grotesh', sans-serif;
     font-weight: 500;
 }
-
+.result .title,
+.summary .title{
+    font-size: 1em;
+}
 .reaction{
     display: flex;
     flex-direction: column;
 }
-
 button{
     width: 10rem;
     color: white;
@@ -46,7 +40,6 @@ button{
     /* font-weight: 500; */
     background: hsl(252, 100%, 67%);
 }
-
 li{
     margin-bottom: 10px;
     list-style: none;
