--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Hanken Grotesh', sans-serif;
+    box-sizing: border-box;
     /* background-color: hsl(0, 0%, 100%); */
 }
 body{
