--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ li{
     list-style: none;
     border: 1px solid black;
 }
-.reaction-red{
+/* .reaction-red{
     background-color: hsl(0, 100%, 67%);
 }
 .memory-yellow{
@@ -70,7 +70,7 @@ li{
 }
 .visual-blue{
     background-color: hsl(234, 85%, 45%);
-}
+} */
 .text-color{
     color: hsl(0, 0%, 100%);
 }
