--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Hanken Grotesh', sans-serif;
+    font-family: 'Hanken Grotesk';
     box-sizing: border-box;
     /* background-color: hsl(0, 0%, 100%); */
 }
@@ -14,11 +14,12 @@ body{
     display: flex;
     gap: 2em;
     border: 1px solid black;
+    background: hsl(0, 0%, 100%);
+
     border-radius: 2%;
     height: 60vh;
 }
 .result-main{
-    /* background-color: hsl(241, 81%, 54%); */
     border: 1px solid black;
     border-radius: 15px;
     background-color: hsl(252, 100%, 67%);
@@ -26,12 +27,15 @@ body{
 }
 .result{
     padding: 20px;
-    font-family: 'Hanken Grotesh', sans-serif;
+    font-family: 'Hanken Grotesh';
     margin: auto;
     font-weight: 500;
 }
 .summary{
-    margin-top: 20px;
+    margin: 20px;
+}
+h2{
+    margin-bottom: 20px;
 }
 .result .title,
 .summary .title{
@@ -43,7 +47,7 @@ body{
 }
 button{
     width: 10rem;
-    color: white;
+    color: hsl(0, 0%, 100%);
     padding: 10px;
     border: none;
     border-radius: 15px;
@@ -55,22 +59,35 @@ button:hover{
     background: hsl(252, 100%, 67%);
 }
 li{
+    display: flex;
+    gap: 2em;
+    justify-content: space-between;
     margin-bottom: 10px;
     list-style: none;
-    border: 1px solid black;
+    border-radius: 5px;
+    padding: 8px;
 }
-/* .reaction-red{
-    background-color: hsl(0, 100%, 67%);
+.icon{
+    display: flex;
+    gap: 1em;
+    align-items: center;
+}
+.reaction-red{
+    background: hsla(0, 87%, 97%, 0.914);
+    color: hsl(0, 100%, 67%);
 }
 .memory-yellow{
-    background-color: hsl(39, 100%, 56%);
+    background: hsla(35, 100%, 56%, 0.05);
+    color: hsl(39, 100%, 56%);
 }
 .verbal-green{
-    background-color: hsl(166, 100%, 37%);
+    background: hsla(166, 100%, 37%, 0.05);
+    color: hsl(166, 100%, 37%);  
 }
 .visual-blue{
-    background-color: hsl(234, 85%, 45%);
-} */
+    background: hsla(234, 85%, 45%, 0.02);
+    color: hsl(234, 85%, 45%);
+}
 .text-color{
     color: hsl(0, 0%, 100%);
 }
