--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,44 +9,14 @@ body{
     /* background-color: hsl(241, 100%, 89%); */
     min-height: 100vh;
     background-color: hsl(221, 100%, 96%);
-}
-.main-section{
-    display: flex;
-    gap: 2em;
-    border: 1px solid black;
-    background: hsl(0, 0%, 100%);
-
-    border-radius: 2%;
-    height: 60vh;
-}
-.result-main{
-    border: 1px solid black;
-    border-radius: 15px;
-    background-color: hsl(252, 100%, 67%);
-    font-weight: 500;
-}
-.result{
-    padding: 20px;
-    font-family: 'Hanken Grotesh';
-    margin: auto;
-    font-weight: 500;
-}
-.summary{
-    margin: 20px;
+    font-size: 18px;
 }
 h2{
     margin-bottom: 20px;
 }
-.result .title,
-.summary .title{
-    font-size: 18px;
-}
-.reaction{
-    display: flex;
-    flex-direction: column;
-}
 button{
-    width: 10rem;
+    margin-top: 41px;
+    width: 12rem;
     color: hsl(0, 0%, 100%);
     padding: 10px;
     border: none;
@@ -62,10 +32,58 @@ li{
     display: flex;
     gap: 2em;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 16px;
     list-style: none;
-    border-radius: 5px;
-    padding: 8px;
+    border-radius: 11px;
+    padding: 10px;
+}
+.main-section{
+    display: flex;
+    max-height: 513px;
+    padding-bottom: 150px;
+}
+.container{
+    max-width: 735px;
+    margin: 100px auto;
+    /* padding-bottom: 150px; */
+}
+.wrapper{
+    display: flex;
+    background: hsl(0, 0%, 100%);
+    border-radius: 32px;
+}
+.result-main{
+    border-radius: 15px;
+    background-color: hsl(252, 100%, 67%);
+    font-weight: 500;
+}
+.result{
+    padding: 20px;
+    font-family: 'Hanken Grotesh';
+    margin: auto;
+    font-weight: 500;
+}
+.summary{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin: 20px;
+    width: 350px;
+}
+/* .result .title,
+.summary .title{
+    font-size: 18px;
+} */
+.feeds{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.numerator{
+    color: hsl(224, 30%, 27%);
+}
+.denominator{
+    color: hsla(224, 30%, 27%, 0.5);
 }
 .icon{
     display: flex;
